--- a/README
+++ b/README
@@ -10,7 +10,7 @@ For detailed information, visit the online pages for:
 
 The package is licensed under a BSD license, described in LICENSE. 
 
-This was released by the Natural Phenomenon Simulation Group at University of
+This was released by the Natural Phenomena Simulation Group at University of
 Waterloo in Waterloo, Ontario, Canada. Please visit http://www.npsg.uwaterloo.ca
 for more information.
 
